Comment tests and remove redundant tests